--- a/doc/shortcuts.tex
+++ b/doc/shortcuts.tex
@@ -138,7 +138,7 @@
   \renewcommand{\ttdefault}{pcr}
   % \renewcommand{\lstlistingname}{\bfseries Quelltext}
   \lstset{language = C,
-        morekeywords={ptrdiff_t, fftw_complex, pfft_plan, pfft_gcplan, pfft_timer, pfft_complex, MPI_Comm, size_t, INT},
+       morekeywords={ptrdiff_t, fftw_complex, pfft_plan, pfft_gcplan, pfft_timer, pfft_complex, MPI_Comm, size_t, INT, pfft_gctimer},
 % 	morekeywords={ptrdiff_t, fftw_complex, pfft_plan, pfft_gcplan, pfft_timer, pfft_complex, MPI_Comm, size_t, INT,
 % 	              PX, R, C, X, XM,
 % 	              MPI_Init, MPI_Finalize, MPI_Comm_free,
